tests/fixtures/invalid/list_ge_str.py
# Cannot compare with >= List[int] and Str
x: bool = [1, 2, 3] >= "hello"
